@@ -147,6 +147,7 @@ Contributors (alphabetically ordered):
 	Added support for flipped tiles in TMX maps. Also added test case
 	Added support for in-memory TMX map creation. Also added a test case
     TMX Map: fixed crash when multiple layers and tiles were used with rotation
+    Added support for TMX rotated tiles
 
 * Spencer Ho
     fixed 3d projection settings for ipad3 
