@@ -12,7 +12,7 @@
  </layer>
  <layer name="Layer 0" width="12" height="12">
   <data encoding="base64" compression="zlib">
-   eJytz0EKwCAMBMCA1IOgB4tnv+LT9ml5WleS0l7agjQwEAlZoojIbkBKQ36uZECaFvMDd4PvVvb1lhMNSON6/gTPn3DONgPSaSX/rbIBafb7G9/N593gYf2zigFpufK1ec/s0Rf/dQBlDRGx
+   eJy10EEKgCAUhOG3qYVgC8N1HcWjdJQ5SkeZo3SUBp5SmwikhA98iD+imdnsIJRiH6/gIAwd/dHskK3NSZ1064wOQimyy9r73uTQ5sFBOPzwP9FBGGs/a871fHF4uP66JgfhdPWZ617tIuxpn9F1Eb0=
   </data>
  </layer>
  <layer name="Second Layer" width="12" height="12">
