@@ -15,6 +15,7 @@ version 1.1-rc0 ..-..-2012
         added reverseOrder, to reverse order of touch detection (issue #1125) 
         color, opacity changed to readwrite    
         touches still work when UIKit elements lay on top of cocos view  
+. [NEW] TileMap: rotated tiles are supported         
 . [NEW] Tests: 
         ActionTest: added test case for issue #1020, synchronizing of several animations each within a CCRepeatForever
         DirectorTest: test case for demonstrating runLoopCommon with a scroll view
